--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "gulp-rename": "^1.2.0"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
+    "bower": "^1.7.9",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
+    "gulp-util": "^2.2.20",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
